--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-/target/
-**/*.rs.bk
-/.vscode/
-.idea/
-*.swp
-*.swo
-*.bak
-*.tmp
-*.log
-.DS_Store
-Thumbs.db
-/debug_output.txt
-.env
-.env.*
-*.old
-*.orig
-/media/
-/.data/
-/tmp/
+media/
+.data/*
+target/
