--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file Dockerfile --tag ghcr.io/${{ github.repository }}:canary
+    - name: Run cargo tests in Docker container
+      run: |
+        docker run --rm ghcr.io/${{ github.repository }}:canary cargo test --release
     - name: Push the Docker image
       run: |
         docker push ghcr.io/${{ github.repository }}:canary
