add sqlite db for file information tracking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ chrono = { version = "0.4", features = ["serde"] }
 futures-util = { version = "0.3", features = ["std"] }
 tokio-util = { version = "0.7", features = ["io"] }
 infer = "0.19.0"
+sha2 = "0.10"
+ r2d2 = "0.8"
+ r2d2_sqlite = "0.24"
+rusqlite = { version = "0.31", features = ["bundled"] }
 
 [profile.release]
 opt-level = 3
