--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,11 @@ mime_guess = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 futures-util = { version = "0.3", features = ["std"] }
 tokio-util = { version = "0.7", features = ["io"] }
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+async-trait = "0.1"
+tokio-sync = "0.1"
+futures = "0.3"
 infer = "0.19.0"
 sha2 = "0.10"
  r2d2 = "0.8"
