--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
 actix-web = { version = "4.4", features = ["macros"] }
 actix-files = "0.6.2"
 actix-multipart = "0.6"
@@ -28,9 +29,10 @@ tokio-sync = "0.1"
 futures = "0.3"
 infer = "0.19.0"
 sha2 = "0.10"
- r2d2 = "0.8"
- r2d2_sqlite = "0.24"
+r2d2 = "0.8"
+r2d2_sqlite = "0.24"
 rusqlite = { version = "0.31", features = ["bundled"] }
+openssl = { version = "0.10", features = ["vendored"] }
 
 [profile.release]
 opt-level = 3
